# chessSDL2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ressources/: chess_pieces.psd
src/: Board.cpp  Board.h  Game.cpp  Game.h  main.cpp  resources.rc
